kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: mywebsite
    name: frontend-svc
spec:
    ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
        app: mywebsite
    type: ClusterIP
