kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/?(.*)"
        backend:
          service:
            name: frontend-svc
            port: 
              number: 3000
